--- a/src/content/blog/es/la-historia-detras-del-blog.mdx
+++ b/src/content/blog/es/la-historia-detras-del-blog.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'La historia detrás del blog'
-date: '2019-09-15'
+title: "La historia detrás del blog"
+date: "2019-09-15"
 description: Parte del proceso que ha llevado este blog de un concepto a una realidad. Detalles de cómo funciona el blog.
 author: misael-taveras
-tags: ['Noticia', 'Personal']
+tags: ["Noticia", "Personal"]
 ---
 
 ![El primer commit para este blog fue creado por Gatsby el 21 de Julio](../../../assets/posts/initial-commit.jpg)
@@ -42,12 +42,12 @@ No tengo acceso a mi primera página web que subí, pero recuerdo que era un gra
 
 > No hablaré en detalles de Gatsby ya que no es un curso ni nada, sino que comentaré por qué me gusta y porque lo elegí.
 
-Gatsby estaba en la boca de todos. [Dan Abramov](https://overreacted.io/?utm_source=taverasmisael 'Overreacted'), [Kent C. Dodds](https://kentcdodds.com/?utm_source=taverasmisael 'KCD') y la documentación de [React](https://reactjs.org/) son solo algunos de los sitos conocidos o de personas que admiro que están [hechos con Gatsby](https://www.gatsbyjs.org/showcase 'Gatsby showcase'). Muchos de ellos como Dan que [dejaron Medium](https://medium.com/@dan_abramov/why-my-new-blog-isnt-on-medium-3b280282fbae) a favor de Gatsby; así que algo bueno debía haber.
+Gatsby estaba en la boca de todos. [Dan Abramov](https://overreacted.io/?utm_source=taverasmisael "Overreacted"), [Kent C. Dodds](https://kentcdodds.com/?utm_source=taverasmisael "KCD") y la documentación de [React](https://reactjs.org/) son solo algunos de los sitos conocidos o de personas que admiro que están [hechos con Gatsby](https://www.gatsbyjs.org/showcase "Gatsby showcase"). Muchos de ellos como Dan que [dejaron Medium](https://medium.com/@dan_abramov/why-my-new-blog-isnt-on-medium-3b280282fbae) a favor de Gatsby; así que algo bueno debía haber.
 
 No sabía nada de Gatsby, pero si de react, así que fui directo al punto, siguiendo mi [formula para aprender](aprendiendo-a-aprender) algo nuevo. Busqué algunos contenidos generales, comparativas hasta que decidí invertir casi 5 horas en un [mini bootcamp](https://www.youtube.com/watch?v=8t0vNu2fCCM&t=10933s&utm_source=taverasmisael) que me puso en el camino correcto.
 
 La semana del 20 de julio fue de instalar plugins para Gatsby, configurar el entorno y crear entradas de prueba para estar seguro que todo se viera bien.
-Utilicé el blog de [Kent](https://twitter.com/kentcdodds?utm_source=taverasmisael) como punto de referencia de como se vería el mío, para el ritmo tipográfico tomé a Medium como referencia, y las fuentes en si usé las de [Command Line Heroes](https://www.redhat.com/en/command-line-heroes/season-3/creating-javascript 'Podcast CLH') (muy buen podcast por cierto) junto con Roboto. Ya para el lenguaje visual (como no soy ~~nada~~ tan diseñador) me fui con [Material](https://material.io) (no hay forma de ir mal con Material Design).
+Utilicé el blog de [Kent](https://twitter.com/kentcdodds?utm_source=taverasmisael) como punto de referencia de como se vería el mío, para el ritmo tipográfico tomé a Medium como referencia, y las fuentes en si usé las de [Command Line Heroes](https://www.redhat.com/en/command-line-heroes/season-3/creating-javascript "Podcast CLH") (muy buen podcast por cierto) junto con Roboto. Ya para el lenguaje visual (como no soy ~~nada~~ tan diseñador) me fui con [Material](https://material.io) (no hay forma de ir mal con Material Design).
 
 Para el alojamiento utilizo [Netlify](https://www.netlify.com?utm_source=taverasmisael.com) ya que me permite tener CD/CI de modo que compilo y verifico que todo esté en orden antes de que se pase a producción (toma eso FTP y WordPress). Y una característica extra es crear un ambiente de staging por cada PR que se haga a master.
 
@@ -79,7 +79,7 @@ Para cumplir este propósito he tomado la decision de subir todos los domingos u
 
 ### Para los desarrolladores
 
-Quiero que todos nos sintamos parte, por esto este blog y todas las página son de [código abierto y el repo está en Github](https://github.com/taverasmisael/taverasmisael 'Repo').
+Quiero que todos nos sintamos parte, por esto este blog y todas las página son de [código abierto y el repo está en Github](https://github.com/taverasmisael/taverasmisael "Repo").
 He creado 3 plantillas básicas de [issue](https://github.com/taverasmisael/taverasmisael/issues/new/choose%5C) en GitHub:
 
 1. **Sugerir un tema:** para los que me han pedido temas, así se verá como una contribución y puedo enlazarlos en el artículo al respecto
