--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -4,6 +4,7 @@ description: I'm a FrontEnd engineer with more than 8 years of experince trying 
 lang: "en"
 layout: "@/layouts/pages/About.astro"
 ---
+
 export const prerender = true;
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
@@ -20,13 +21,14 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
         I'm building with **React**, **TypeScript**, and **Node.js**.
       </div>
     </div>
+
 </FullWidthBlock>
 
 ## Who am I?
 
 I was born in 1996, in Santo Domingo, Dominican Republic 🇩🇴.
 
-I started learning to code when I was 14, with a *"not-so-legal"* copy of Visual Studio 2008. I have been hooked since then. Somehow my dad got a PDF of a book about Macromedia Dreamweaver. Even though it was outdated, it was enough to get me started. Since then, I've been learning independently, grabbing every opportunity improve my skills.
+I started learning to code when I was 14, with a _"not-so-legal"_ copy of Visual Studio 2008. I have been hooked since then. Somehow my dad got a PDF of a book about Macromedia Dreamweaver. Even though it was outdated, it was enough to get me started. Since then, I've been learning independently, grabbing every opportunity improve my skills.
 
 When I graduated from college in **Computer Science in 2018**, I already had years of experience working as a developer on-site and freelancer. But I didn't stop there; I'm always learning new things and looking for new challenges. This led me to work for international companies like [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), and others.
 
@@ -50,28 +52,28 @@ I build what the user sees when they visit the page. The buttons, colours and in
   <div>
 
 ### User experience
-  
-  > Start with the user in mind, and everything else will follow.
-  
-  A website or an app usually is the point of contact between the user and the company. Web performance, accessibility, and usability are vital in providing a good user experience.
-  
-  **Web performance**: I know how frustrating using a slow and unresponsive website can be. So I always approach every situation with a progressive enhancement mindset.
-  
-  **Accessibility**: Unlike other platforms, the web can be accessed from almost any device. With screens of all sizes, colour ranges, and input methods; so thinking about accessibility is a topic that should always be on the table.
+
+> Start with the user in mind, and everything else will follow.
+
+A website or an app usually is the point of contact between the user and the company. Web performance, accessibility, and usability are vital in providing a good user experience.
+
+**Web performance**: I know how frustrating using a slow and unresponsive website can be. So I always approach every situation with a progressive enhancement mindset.
+
+**Accessibility**: Unlike other platforms, the web can be accessed from almost any device. With screens of all sizes, colour ranges, and input methods; so thinking about accessibility is a topic that should always be on the table.
 
   </div>
 
   <div>
 
 ### Developer experience
-  
-  > Developers spend more time reading code than writing it.
 
-  Having a good developer experience is critical to having good developer productivity. And good developer productivity means more value to our users.
+> Developers spend more time reading code than writing it.
 
-  **Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and hasty abstractions.
+Having a good developer experience is critical to having good developer productivity. And good developer productivity means more value to our users.
 
-  **Testing & Documentation**: Part of being productive is not wasting time figuring out how things work. Having the confidence that your changes won't break something else sometimes is underrated. Writting good docs and tests has saved future Misael a handful of times.
+**Code quality**: I always try to write code that is easy to read and understand, avoiding unnecessary complexity and hasty abstractions.
+
+**Testing & Documentation**: Part of being productive is not wasting time figuring out how things work. Having the confidence that your changes won't break something else sometimes is underrated. Writting good docs and tests has saved future Misael a handful of times.
 
   </div>
 
@@ -79,13 +81,13 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
 ### Helping others
 
-  > The end of all knowledge should be service to others.
+> The end of all knowledge should be service to others.
 
-  Although I enjoy coding, I recently discovered that I find more joy in helping others to improve their skills. I'm always looking for ways to help others to improve their skills.
+Although I enjoy coding, I recently discovered that I find more joy in helping others to improve their skills. I'm always looking for ways to help others to improve their skills.
 
-  **Teamwork**: The best high-quality software is built by teams, not individuals. Relying on others and helping others is vital to building great software.
+**Teamwork**: The best high-quality software is built by teams, not individuals. Relying on others and helping others is vital to building great software.
 
-  **Mentoring**: Sometimes, one-on-one conversation with someone can be more valuable than reading a book or watching a video. That's why [I am available](/en/contact) for questions and help as much as possible
+**Mentoring**: Sometimes, one-on-one conversation with someone can be more valuable than reading a book or watching a video. That's why [I am available](/en/contact) for questions and help as much as possible
 
   </div>
 </div>
