--- a/src/pages/en/contact.mdx
+++ b/src/pages/en/contact.mdx
@@ -1,9 +1,10 @@
 ---
 title: Hey, let's talk!
 description: You can reach out to me, no strings attached. I'm always happy to help.
-lang: 'en'
-layout: '@/layouts/pages/Contact.astro'
+lang: "en"
+layout: "@/layouts/pages/Contact.astro"
 ---
+
 export const prerender = true;
 
 If you have any questions, feedback, or just want to say hi, I'm more than happy to hear from you.
