--- a/src/content/blog/es/aprendiendo-a-aprender.mdx
+++ b/src/content/blog/es/aprendiendo-a-aprender.mdx
@@ -1,9 +1,9 @@
 ---
 title: Aprendiendo a aprender
-date: '2019-09-08'
+date: "2019-09-08"
 description: Como aprender mejor siguiendo algunas técnicas y recomendaciones que me han servido para aprender independiente.
 author: misael-taveras
-tags: ['Consejo', 'Soft Skills']
+tags: ["Consejo", "Soft Skills"]
 ---
 
 Si estas pensando o en proceso de aprender algo nuevo de forma independiente estos tips podrían servirte.
