--- a/src/content/blog/es/porque-utilizo-brave-como-mi-navegador.mdx
+++ b/src/content/blog/es/porque-utilizo-brave-como-mi-navegador.mdx
@@ -1,9 +1,9 @@
 ---
 title: Porqué utilizo Brave como mi navegador principal
-date: '2019-08-28'
+date: "2019-08-28"
 description: Hace más de medio año que tomé la decisión de experimentar con Brave y desde entonces no he vuelto a usar google Chrome
 author: misael-taveras
-tags: ['Herramientas', 'Opinión']
+tags: ["Herramientas", "Opinión"]
 ---
 
 Hace ya unos meses que he estado utilizando [Brave][bravelink] como mi navegador luego de toda una vida de Chrome.
