--- a/src/content/blog/es/usar-map-filter-y-reduce-para-olvidarnos-de-los-bucles-for.mdx
+++ b/src/content/blog/es/usar-map-filter-y-reduce-para-olvidarnos-de-los-bucles-for.mdx
@@ -123,7 +123,8 @@ const timpares = numberArray.filter(n => n % 2 !== 0);
 ```
 
 <Admonition type="tip">
-  Visita mi post donde explico con [más detalles las arrow functions](javascript-todo-lo-nuevo-desde-es6-hasta-hoy-parte-1#arrow-functions).
+  Visita mi post donde explico con [más detalles las arrow
+  functions](javascript-todo-lo-nuevo-desde-es6-hasta-hoy-parte-1#arrow-functions).
 </Admonition>
 
 Listo ya está. La función filter se encarga de iterar por sí sola iniciando en 0 y
