--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -4,6 +4,7 @@ description: Soy un ingeniero de frontend con más de ocho años de experiencia 
 lang: "es"
 layout: "@/layouts/pages/About.astro"
 ---
+
 export const prerender = true;
 
 import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
@@ -20,20 +21,21 @@ import FullWidthBlock from "@/components/content/FullWidthBlock.astro";
         De momento estoy usando **React**, **TypeScript**, y **Node.js**.
       </div>
     </div>
+
 </FullWidthBlock>
 
 ## ¿Quién soy?
 
 Nací en 1996, en Santo Domingo, República Dominicana 🇩🇴.
 
-Empecé a aprender a programar cuando tenía 14, con una copia *"no muy legal"* de Visual Studio 2008. De alguna manera mi papá consiguió un PDF sobre Macromedia Dreamweaver, que aunque estaba desactualizado, fue suficiente para empezar. Ahí descubrí mi pasión por la web, y he estado aprendiendo de forma independiente, aprovechando cada oportunidad para mejorar mis habilidades como programador.
+Empecé a aprender a programar cuando tenía 14, con una copia _"no muy legal"_ de Visual Studio 2008. De alguna manera mi papá consiguió un PDF sobre Macromedia Dreamweaver, que aunque estaba desactualizado, fue suficiente para empezar. Ahí descubrí mi pasión por la web, y he estado aprendiendo de forma independiente, aprovechando cada oportunidad para mejorar mis habilidades como programador.
 
 **En 2018, cuando me gradué de Ingeniería en Sistemas** en la universidad, ya había tenido experiencia trabajando como desarrollador en varios sitios, y como freelancer. Pero no me detuve ahí; siempre estoy aprendiendo cosas nuevas y buscando nuevos retos.
 Lo que me llevó a trabajar para compañías y clientes internacionales como [GBH](https://gbh.com.do/), [Virtual Mind](https://virtualmind.com/), [TheySaid](https://www.theysaid.io/), entre otras.
 
 ## Lo que hago
 
-El termino *FrontEnd Engineer* puede significar muchas cosas. En principio significa que uso HTML, CSS, JavaScript y todos los sabores relacionados para crear una interfaz que ayude a los usuarios a lograr lo que quieren y a la compañía a llegar a más usuarios.
+El termino _FrontEnd Engineer_ puede significar muchas cosas. En principio significa que uso HTML, CSS, JavaScript y todos los sabores relacionados para crear una interfaz que ayude a los usuarios a lograr lo que quieren y a la compañía a llegar a más usuarios.
 
 Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los botones, colores e interacciones. El punto de contacto entre la compañía y sus usuarios. Y siempre estoy buscando formas de hacer el viaje más agradable.
 
@@ -52,27 +54,27 @@ Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los boto
 
 ### Experiencia de usuario (UX)
 
-  > Empieza con el usuario en mente, y lo demás vendrá por añadidura.
-  
-  Una página web o una aplicación usualmente es el punto de contacto entre el usuario y la compañía. El rendimiento, la accesibilidad y la usabilidad son vitales para proveer una buena experiencia de usuario.
-  
-  **Rendimiento**: Sé lo frustrante que puede ser usar una página web lenta, o poco responsiva. Por eso siempre abordo cada situación con una mentalidad de mejora progresiva.
-  
-  **Accesibilidad**: A diferencia de otras plataformas, la web puede ser accedida desde casi cualquier dispositivo. Con pantallas de todos los tamaños, rangos de colores y métodos de entrada; por lo que la accesibilidad es un tema que siempre debe estar sobre la mesa.
+> Empieza con el usuario en mente, y lo demás vendrá por añadidura.
+
+Una página web o una aplicación usualmente es el punto de contacto entre el usuario y la compañía. El rendimiento, la accesibilidad y la usabilidad son vitales para proveer una buena experiencia de usuario.
+
+**Rendimiento**: Sé lo frustrante que puede ser usar una página web lenta, o poco responsiva. Por eso siempre abordo cada situación con una mentalidad de mejora progresiva.
+
+**Accesibilidad**: A diferencia de otras plataformas, la web puede ser accedida desde casi cualquier dispositivo. Con pantallas de todos los tamaños, rangos de colores y métodos de entrada; por lo que la accesibilidad es un tema que siempre debe estar sobre la mesa.
 
   </div>
 
   <div>
 
 ### Experiencia del desarollador (DX)
-  
-  > Los desarrolladores pasan más tiempo leyendo código que escribiéndolo.
 
-  Tener una buena experiencia de desarrollo es crítico para aumentar la productividad. Más productividad significa más valor para nuestros usuarios en menos tiempo.
+> Los desarrolladores pasan más tiempo leyendo código que escribiéndolo.
 
-  **Calidad de código**: Siempre trato de escribir código que sea fácil de leer y entender, evitando complejidad innecesaria y abstracciones apresuradas.
+Tener una buena experiencia de desarrollo es crítico para aumentar la productividad. Más productividad significa más valor para nuestros usuarios en menos tiempo.
 
-  **Pruebas y documentación**: Parte de ser productivo es no perder tiempo tratando de entender como funcionan las cosas. Tener la confianza de que tus cambios no romperán algo más a veces es subestimado. Escribir buena documentación y pruebas ha salvado al Misael del futuro incontables veces.
+**Calidad de código**: Siempre trato de escribir código que sea fácil de leer y entender, evitando complejidad innecesaria y abstracciones apresuradas.
+
+**Pruebas y documentación**: Parte de ser productivo es no perder tiempo tratando de entender como funcionan las cosas. Tener la confianza de que tus cambios no romperán algo más a veces es subestimado. Escribir buena documentación y pruebas ha salvado al Misael del futuro incontables veces.
 
   </div>
 
@@ -80,13 +82,13 @@ Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los boto
 
 ### Ayudar a los demás
 
-  > El fin de todo conocimiento debe ser el servicio a los demás.
+> El fin de todo conocimiento debe ser el servicio a los demás.
 
-  A pesar de que disfruto programar, recientemente descubrí que encuentro más alegría ayudando a otros a mejorar sus habilidades. Siempre estoy buscando formas de ayudar a otros, y compartir mi experiencia y conocimiento a quien lo requiera.
+A pesar de que disfruto programar, recientemente descubrí que encuentro más alegría ayudando a otros a mejorar sus habilidades. Siempre estoy buscando formas de ayudar a otros, y compartir mi experiencia y conocimiento a quien lo requiera.
 
-  **Trabajo en equipo**: El software de alta calidad es construido por equipos, no por individuos. Confiar en los demás y ayudar a los demás es vital para crear software que trascienda.
+**Trabajo en equipo**: El software de alta calidad es construido por equipos, no por individuos. Confiar en los demás y ayudar a los demás es vital para crear software que trascienda.
 
-  **Mentoría**: A veces, una conversación uno a uno con alguien puede ser más valiosa que leer un libro o ver un video. Por eso siempre [estoy disponible](/es/contact) para preguntas y ayudar tanto como sea posible.
+**Mentoría**: A veces, una conversación uno a uno con alguien puede ser más valiosa que leer un libro o ver un video. Por eso siempre [estoy disponible](/es/contact) para preguntas y ayudar tanto como sea posible.
 
   </div>
 </div>
