--- a/src/pages/es/contact.mdx
+++ b/src/pages/es/contact.mdx
@@ -1,9 +1,10 @@
 ---
 title: Hola, ¡Hablemos!
 description: Puedes contactarme sin compromiso. Siempre estoy dispuesto a ayudar.
-lang: 'es'
-layout: '@/layouts/pages/Contact.astro'
+lang: "es"
+layout: "@/layouts/pages/Contact.astro"
 ---
+
 export const prerender = true;
 
 Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de saber de ti.
