add the good dark mode to the about page and PostCard

--- a/src/pages/en/about.mdx
+++ b/src/pages/en/about.mdx
@@ -44,7 +44,7 @@ I build what the user sees when they visit the page. The buttons, colours and in
 
 **For me**: it is working on a project I can be proud of, where I'll learn new things.
 
-<FullWidthBlock withContainer class="bg-slate-200 dark:prose-blockquote:border-slate-700 prose-blockquote:border-slate-400 dark:bg-slate-900 prose-blockquote:opacity-80">
+<FullWidthBlock withContainer class="gradient-slate-slate bg-gradient-to-t dark:gradient-gray-slate dark:prose-blockquote:border-gray-700 prose-blockquote:border-gray-400 prose-blockquote:opacity-80">
 
 ## Core beliefs
 
