feat: improve dark mode (#24)
Closes #3 
* use gray instead of slate as main dark color

gray still a bit blue-ish but not as much as slate, but also not as _gray_ as the _neutral_.

* fix dark mode for footer elements

* fix featured post not cool if parent had background

Basically the effect negative z-index made impossible to appreciate if the parent had any background color

* adjust gotoTop position and remove footer margin-top

The GTT button overlapped with the RSS feed on the footer

* complete dark styles for the home page

* make my custom gradient more align with Tailwind philosophy

* complete dark theme for blog pages

* fix dark mode for contact page

* add the good dark mode to the about page and PostCard

* change nav pages order

* fix the dark theme for the command bar

* add breathing for about section

--- a/src/pages/es/about.mdx
+++ b/src/pages/es/about.mdx
@@ -45,7 +45,7 @@ Mi trabajo es crear lo que los usuarios ven cuando visitan una página. Los boto
 
 **Para mí**: es trabajar en un proyecto del que pueda estar orgulloso, donde aprenderé cosas nuevas.
 
-<FullWidthBlock withContainer class="bg-slate-200 dark:prose-blockquote:border-slate-700 prose-blockquote:border-slate-400 dark:bg-slate-900 prose-blockquote:opacity-80">
+<FullWidthBlock withContainer class="gradient-slate-slate mt-16 bg-gradient-to-t dark:gradient-gray-slate dark:prose-blockquote:border-gray-700 prose-blockquote:border-gray-400 prose-blockquote:opacity-80">
 
 ## Creencias fundamentales
 
