fix: heading order
I was using an h3, should be an h2

--- a/src/pages/en/contact.mdx
+++ b/src/pages/en/contact.mdx
@@ -9,6 +9,6 @@ export const prerender = true;
 
 If you have any questions, feedback, or just want to say hi, I'm more than happy to hear from you.
 
-### I'm **available for hire** if you need help in your project
+## I'm **available for hire** if you need help in your project
 
 Find me on [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/), and [Dev.to](https://dev.to/taverasmisael) as **@taverasmisael**.
