--- a/src/pages/es/contact.mdx
+++ b/src/pages/es/contact.mdx
@@ -9,6 +9,6 @@ export const prerender = true;
 
 Ya sea que tengas alguna pregunta, comentario o simplemente quieras saludar, estoy más que feliz de saber de ti.
 
-### Estoy **disponible para colaborar** si necesitas ayuda con tu proyecto
+## Estoy **disponible para colaborar** si necesitas ayuda con tu proyecto
 
 Encuentrame en [Twitter](https://twitter.com/taverasmisael), [GitHub](https://github.com/taverasmisael), [LinkedIn](https://www.linkedin.com/in/taverasmisael/) y [Dev.to](https://dev.to/taverasmisael) como **@taverasmisael**.
