--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,7 +61,7 @@
     "reading_translation_archive": "This {{collection_name}} is originally written in {{original_language}}. To see all the entries, visit the ",
     "incomplete_translation_disclaimer": "This translation may be incomplete. To see the original version, visit the ",
     "cv_is_available_in": "My resume is available to ",
-    "serch_powered_by": "Search powered by"
+    "search_powered_by": "Search powered by"
   },
   "page_descriptions": {
     "blog": "Find articles about web development, technology, programming, design and more.",
